--- a/app/build.gradle
+++ b/app/build.gradle
@@ -188,6 +188,7 @@ dependencies {
     compile project(':falcon_scanner')
     compile project(':PushSDK')
 
+    //compile 'com.github.chrisbanes:PhotoView:latest.release.here'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
@@ -208,9 +209,12 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
+    compile 'com.android.support.constraint:constraint-layout:+'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile 'com.bm.photoview:library:1.4.1'
 }
+
 
 
 
