--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,7 @@
         <activity android:name=".DataMonitor.MonitorPointListActivity" />
         <activity android:name=".DataMonitor.MonitorSensorTypesActivity" />
         <activity android:name=".DataMonitor.MonitorSensorListActivity" />
+        <activity android:name=".DataMonitor.LineChartActivity1" />
         <activity android:name=".DataMonitor.MonitorAddSensorDataActivity" />
         <activity android:name=".Commons.WebViewActivity" />
         <activity android:name=".Commons.ImagePreviewActivity"></activity>
