--- a/app/build.gradle
+++ b/app/build.gradle
@@ -213,6 +213,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'com.bm.photoview:library:1.4.1'
+    compile 'com.cjj.materialrefeshlayout:library:1.3.0'
 }
 
 
